--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,15 +61,14 @@ jobs:
         uses: tj-actions/verify-changed-files@v16
         with:
           files: |
-            README.md
-            coverage.svg
+            README.md            
 
       - name: Commit changes
         if: steps.verify-changed-files.outputs.files_changed == 'true'
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add README.md coverage.svg
+          git add README.md
           git commit -m "chore: Update coverage badge"
 
       - name: Push changes
