--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Go test with coverage
         run: |
-          go test ./... -covermode=count -coverprofile=coverage.out
+          go test $(go list ./... | grep -v '/examples' | grep -v 'testutil') -covermode=count -coverprofile=coverage.out
           go tool cover -func=coverage.out -o=coverage.out
 
       - name: Generate coverage badge
