Removed submodules from go generate

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
           git diff --exit-code || (echo "go mod tidy produced changes; please commit them" && exit 1)
 
       - name: Go generate
-        run: go generate ./... ./mongo/... ./postgres/... ./redis/...
+        run: go generate ./...
 
       - name: Go vet
         run: go vet ./... ./mongo/... ./postgres/... ./redis/...
