Removed submodules from go vet

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
         run: go generate ./...
 
       - name: Go vet
-        run: go vet ./... ./mongo/... ./postgres/... ./redis/...
+        run: go vet ./...
 
       - name: Go test with coverage
         run: |
